# lasma-telegram-bot

./: Calculator.py  Chess.py  Datetime.py  Dictionary.py  Draw.py  Handler.py  Image.py  Leaderboard.py  Music.py  Snake.py  Sokoban.py  TicTacToe.py  Voice.py  Weather.py  main.py  pyproject.toml
.upm/: store.json605324558  store.json878141116
JSON/: Calculator.json  Draw.json  Image.json  Lang.json  Leaderboard.json  Snake.json  Sokoban.json  TicTacToe.json  TicTacToeAI.json  Voice.json
